--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <nav>
                     <ul>
-                        <li id="home"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#works">Works</a></li>
                         <li><a href="#team">Our Team</a></li>
