--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <html lang="pt-br">
 
     <head>
-
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ActiveBox</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <!--[if lt IE 9]>
 	    <script src="js/shiv.js"></script>
         <![endif]-->
-
     </head>
 
     <body>
@@ -233,17 +232,15 @@
 
             <section id="testimonials" class="area-conteudo-5"> <!-- INICIO-AREA-CONTEUDO-5 -->
 
-                <article class="conteudo-5-img">
+                <article class="area-conteudo-5-img">
                     <img src="img/client.png" alt="">
                 </article>
 
-                <article class="conteudo-5-texto">
-                    <span>
-                        “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
-                    </span>
-                    <p>
-                        Susan Sims, Interaction Designer at XYZ
-                    </p>
+                <article class="area-conteudo-5-texto">
+                    <h3>
+                        “Integer posuere erat a ante<br> venenatis dapibus posuere velit<br> aliquet. Donec sed odio dui.<br> Aenean eu leo quam...”
+                    </h3>
+                    <span>Susan Sims, Interaction Designer at XYZ</span>
                 </article>
 
             </section> <!-- FIM-AREA-CONTEUDO-5 -->
